fix: color issue in the dark mode (#2014)

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -9,7 +9,6 @@ a {
 .p-chip:hover {
   transform: scale(1.1);
   background: linear-gradient(145deg, #c8cbcf, #eef2f6);
-  box-shadow: 8px 8px 15px #bdc0c4, -8px -8px 15px #ffffff;
   color: black !important;
 }
 
